--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -15,10 +15,8 @@
             <div class="date">
                 Aug 14, 2016
             </div>
-            <div class="links">
-                <div class="signup">Sign Up</div>
-                <div class="login">Login</div>
-            </div>
+            <div class="signup">Sign Up</div>
+            <div class="login">Login</div>
         </div>
     </div>
     <div class="header-container">
@@ -46,6 +44,11 @@
                 <img src='images/five.svg' />
             </div>
         </div>
+    </div>
+    <div class='footer'>
+        <div class='footer-item footer-one'></div>
+        <div class='footer-item footer-two'></div>
+        <div class='footer-item footer-three'></div>
     </div>
 </body>
 
